--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "Brandon Semilla (grandonbroseph+gh@gmail.com)",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.17.3",
+    "browserify": "^3.46.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-browserify": "^0.5.1",
-    "run-sequence": "^1.2.2"
+    "gulp-plumber": "^1.1.0",
+    "ngrok": "^2.2.3",
+    "run-sequence": "^1.2.2",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
