--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "roguelike",
-  "version": "1.0.0",
-  "description": "Web-based roguelike powered by Vue.js.",
-  "repository": "git@github.com:grandonbroseph/roguelike.git",
-  "author": "Brandon Semilla (grandonbroseph+gh@gmail.com)",
-  "license": "MIT",
-  "devDependencies": {
-    "browser-sync": "^2.17.3",
-    "browserify": "^3.46.1",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-plumber": "^1.1.0",
-    "ngrok": "^2.2.3",
-    "run-sequence": "^1.2.2",
-    "vinyl-source-stream": "^1.1.0"
-  }
+	"name": "roguelike",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"react": "15.4.2",
+		"react-native": "0.40.0"
+	},
+	"devDependencies": {
+		"babel-jest": "18.0.0",
+		"babel-preset-react-native": "1.9.1",
+		"jest": "18.1.0",
+		"react-test-renderer": "15.4.2"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
