--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-"presets": ["react-native"]
+  "presets": [
+    [
+      "es2015",
+      {
+        "modules": false
+      }
+    ]
+  ],
+  "plugins": [
+    "external-helpers"
+  ]
 }
