--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-	"name": "roguelike",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "15.4.2",
-		"react-native": "0.40.0"
-	},
-	"devDependencies": {
-		"babel-jest": "18.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "18.1.0",
-		"react-test-renderer": "15.4.2"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "roguelike",
+  "version": "0.3.0",
+  "description": "Web-based roguelike powered by Vue.js.",
+  "author": "Brandon Semilla (https://github.com/semibran)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/semibran/roguelike.git"
+  },
+  "license": "MIT",
+  "scripts": {
+    "start": "npm-run-all --parallel serve watch",
+    "serve": "reload -bd docs",
+    "watch": "rollup --watch --input src/index.js -mco docs/build.js"
+  },
+  "devDependencies": {
+    "babel-plugin-external-helpers": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "npm-run-all": "^4.0.0",
+    "reload": "^1.1.0",
+    "rollup": "^0.41.1",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-watch": "^3.2.2"
+  }
 }
